Fixes #723 Replaced button with icon. Moved icon to the left for correct aligning. Sorting on period.

--- a/files/static/less/profiles.less
+++ b/files/static/less/profiles.less
@@ -197,3 +197,15 @@ textarea {
     padding: 7px 0;
   }
 }
+
+.delete-position {
+  float: left;
+  cursor: pointer;
+  margin-right: 10px;
+  padding-top: 2px;
+  line-height: 12px;
+}
+
+.position p {
+  margin-bottom: 0px;
+}
